--- a/vistas/cliente.dust
+++ b/vistas/cliente.dust
@@ -14,24 +14,24 @@
 		var socket = io.connect(location.origin);
 		
 		$(function(){
-           /* $("#boton").click(function(){
-               
-                var nombre = $("#nombre-usuario").val();
-                var mensaje = $("#mensaje-usuario").val();
-                socket.emit("mensaje_al_servidor",{
-                    nombre: nombre,
-                    mensaje: mensaje
-                });
-            });*/
-            
-            /*escucho el mensaje al cliente*/
-           //socket.on("mensaje_al_cliente", function(datosServidor){
-              /*  var nombre = datosServidor.nombre;
-                var mensaje =  datosServidor.mensaje;*/
-                /*hay que validar el mensaje del lado del servidor*/
-             /*   var caja = "<div class='mensaje'> <span>" + nombre + " dice: </span> "+ mensaje +"</div>";
-                $("#mensajes").append(caja);*/
-            //})
+		    /*enviar mensaje al servidor*/
+		    $("#boton").click(function(){
+		        /*obtener los datos que voy a enviar*/
+		        var nombreCliente = $("#nombre-usuario").val();
+		        var mensajeCliente = $("#mensaje-usuario").val();
+		        socket.emit("mensaje_al_servidor",{
+		            nombre: nombreCliente,
+		            mensaje: mensajeCliente
+		        });
+		    });
+		    /*recibir mensaje del servidor*/
+		    socket.on("mensaje_al_cliente",function(datosServidor){
+		        var nom = datosServidor.nombre;
+		        var mens = datosServidor.mensaje;
+		        /*pintar el mensaje en la interfaz*/
+		        var caja = "<div class='mensaje'> <span>" + nom + " dice: </span> "+ mens +"</div>";
+                $("#mensajes").append(caja);
+		    });            
 		});		
 			
 		</script>
